# block-game

./: CMakeLists.txt  README.md
apps/: CMakeLists.txt  main.c
include/: block.h  camera.h  frustum.h  plane.h  shader.h
include/glad/: gl.h
shaders/: shader2.fs
src/: CMakeLists.txt  block.c  camera.c  frustum.c  shader.c
